--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Covid19Tracker</string>
+    <string name="app_name">Covid Tracker</string>
     <string name="text_country">Country</string>
     <string name="text_confirmed">Confirmed</string>
     <string name="text_recovered">Recovered</string>
